# Agentic-AI

./: README.md  pyproject.toml
Day 1 - UV/: README.md
Day 1 - UV/AGI-Day-1/: .gitignore  README.md  pyproject.toml
Day 1 - UV/AGI-Day-1/package/: main.py
package/: main.py
